<resources>
    <string name="app_name">Calendar</string>
    <string name="action_settings">Settings</string>

    <string name="first_fragment_description">We\'ll let you know when your alarm is going to make you miss a calendar event</string>
    <string name="sync_calendar_button_text"><font size="20">Sync your calendar</font>\n\<font size="10"> to Get Started</font></string>
    <string name="choose_default_calendar_button_text"><font size="20">Choose your default</font>\n\<font size="10"> Calendar App</font></string>
    <string name="timeAndFrequency">Time &amp; Frequency</string>

    <!-- Application -->
    <color name="holo_blue_light">#ff33b5e5</color>

    <!-- Math Alarm Activity -->
    <string name="title_activity_set_alarms">Set Alarm</string>
    <string name="no_alarms">No alarms have been set</string>
    <string name="vibrate">Vibrate</string>
    <string name="snooze">Snooze</string>
    <string name="snoozeFor">Snooze for</string>

    <string name="button_new">New</string>

    <!-- Menu -->
    <string name="menu_item_new">New</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_delete">Cancel</string>
    <string name="menu_item_rate">Rate on Google Play</string>
    <string name="menu_item_website">Website</string>
    <string name="menu_item_report">Report a Bug</string>

    <!-- Alert -->
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="decimal_button_text">,</string>
    <string name="clear_button_text">Clear</string>
    <string name="snooze_button_text">Snooze</string>
    <string name="minus_button_text">-</string>


    <color name="title_background_color">#000000</color>

    <string name="button_delete">Delete</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="timePlaceholder">07:46 AM</string>
    <string name="someDatePlaceholder">Monday, July 18th</string>
    <string name="eventNameTimePlaceholder">Event Name # HH:MM AM</string>
    <string name="noAlarmsSet">No alarms set</string>
    <string name="cancelFor">Cancel for…</string>
    <string name="today">Today</string>
    <string name="allDayOfWeeks">All (Day of week)s</string>
    <string name="entireAlarm">Entire Alarm</string>
    <string name="editEventAlarm">Edit Event Alarm</string>
    <string name="thisDayOnly">(this day only)</string>
    <string name="syncCalendars">Sync Calendar(s)</string>
    <string name="availableCalendars">Available Calendars</string>
    <string name="googleCalendar">Google Calendar</string>
    <string name="am">AM</string>
    <string name="m">M</string>
    <string name="mmDD">MM/DD</string>
    <string name="hhMM">HH:MM AM</string>
    <string name="notificationSettings">Notification Settings</string>
    <string name="notification">Notification</string>
    <string name="eventTiming">Event Timing</string>
    <string name="eventsBefore">events before</string>
    <string name="eventsBeforeFirstAlarmBy">events before first alarm by</string>
    <string name="excludeAlarmsBefore">exclude alarms before</string>
    <string name="newAlarms">New alarm(s) added automatically</string>
    <string name="calendarSync">Calendar Sync</string>
    <string name="contactUs">Contact Us</string>
    <string name="help">Help</string>
    <string name="set">Set</string>
    <string name="moreSettings">More Settings</string>
    <string name="review">Submit a Review</string>

    <string name="title_activity_contact_us">Contact Us</string>
    <string name="title_activity_more_settings">More Settings</string>
    <string name="title_activity_detailed_day">Detailed Day</string>
    <string name="title_activity_sync_calendars">Sync Calendars</string>
    <string name="title_activity_notification_settings">Notification Settings</string>
</resources>
