<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="me.vucko.calendarapp.fragments.ThirdFragment">
    <Button
        android:id="@+id/notificationSettingsButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/notificationSettings"/>
    <Button
        android:id="@+id/calendarSyncButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/calendarSync"/>
    <Button
        android:id="@+id/contactUsButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/contactUs"/>
    <Button
        android:id="@+id/helpButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/help"/>


</LinearLayout>
