<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:layout_margin="@dimen/activity_horizontal_margin">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelFor"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
    <Button
        android:background="@drawable/custom_shadow_button"
        android:id="@+id/todayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today"/>
    <Button
        android:background="@drawable/custom_shadow_button"
        android:id="@+id/allDayOfWeeksButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allDayOfWeeks"/>
    <Button
        android:background="@drawable/custom_shadow_button"
        android:id="@+id/entireAlarmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entireAlarm"/>


</LinearLayout>